# explicit-arbitration

./: .gitignore  AGENTS.md  README.md  app.py  main.py  pyproject.toml  run_output.json
explicit_arbitration/: __init__.py  arbitrated_runner.py  baseline_runner.py  hydradecide.py  model_client.py  orchestrator.py  reasontree.py  sample_sessions.py  scoring_rules.py  traces.py
prompts/: PLAN.md  SPEC.md  TEST_PLAN.md  TOKEN_BUDGET_MODE_SPEC.md
tests/: test_arbitrated_runner.py  test_baseline_runner.py  test_end_to_end.py  test_hydradecide.py  test_orchestrator.py  test_reasontree.py  test_scoring_rules.py  test_traces.py
